Changes Made to ST9x FWLib
--------------------------

$Id$

1. Downloaded um0233.zip, version 2.1, February 2009, from www.st.com.

2. Copied source and header files to this subdirectory.

3. Removed trailing DOS CR's from each source and header file.

4. Eliminated 91x_it.c.  ISR stubs are provided by linker.ld instead,
   and may be overridden by routines declared in user source files.
   See test_timer1.c for an example.

5. Added some parantheses to 91x_adc.c to avoid a gcc compiler warning.

6. Modified 91x_tim.c to reset the counter to 0x0000, not 0x1234.

7. Removed unused variable i from SCU_PLLCmd() in 91x_scu.c.

8. Added (void) tmp; to RTC_ClearFlag() in 91x_rtc.c to avoid compiler
   warning from GCC 4.6.

9. Added (void) tmp; to ADC_ClearFlag() in 91x_adc.c to avoid compiler
   warning from GCC 4.6.

10. Undefine TRUE and FALSE in 91x_type.h before defining the bool type.