@@ -137,13 +137,13 @@ void CAN_SetBitrate(u32 bitrate);
 void CAN_SetTiming(u32 tseg1, u32 tseg2, u32 sjw, u32 brp);
 ErrorStatus CAN_SetUnusedMsgObj(u32 msgobj);
 ErrorStatus CAN_SetTxMsgObj(u32 msgobj, u32 idType, FunctionalState RemoteEN);
-ErrorStatus CAN_SetRxMsgObj(u32 msgobj, u32 idType, u32 idLow, u32 idHigh, bool singleOrFifoLast);
+ErrorStatus CAN_SetRxMsgObj(u32 msgobj, u32 idType, u32 idLow, u32 idHigh, boolean singleOrFifoLast);
 ErrorStatus CAN_SetUnusedAllMsgObj(void);
 ErrorStatus CAN_ReleaseMessage(u32 msgobj);
 ErrorStatus CAN_UpdateMsgObj(u32 msgobj, canmsg* pCanMsg);
 ErrorStatus CAN_SendMessage(u32 msgobj, canmsg* pCanMsg);
 ErrorStatus CAN_TransmitRequest( u32 msgobj );
-ErrorStatus CAN_ReceiveMessage(u32 msgobj, bool release, canmsg* pCanMsg);
+ErrorStatus CAN_ReceiveMessage(u32 msgobj, boolean release, canmsg* pCanMsg);
 void CAN_WaitEndOfTx(void);
 ErrorStatus CAN_BasicSendMessage(canmsg* pCanMsg);
 ErrorStatus CAN_BasicReceiveMessage(canmsg* pCanMsg);
