@@ -59,7 +59,7 @@ typedef volatile signed long  const vsc32;  /* Read Only */
 typedef volatile signed short const vsc16;  /* Read Only */
 typedef volatile signed char  const vsc8;   /* Read Only */
 
-typedef enum {FALSE = 0, TRUE = !FALSE} bool;
+typedef enum {FALSE = 0, TRUE = !FALSE} boolean;
 
 typedef enum {RESET = 0, SET = !RESET} FlagStatus, ITStatus;
 
@@ -87,7 +87,7 @@ typedef volatile signed long     vs32;
 typedef volatile signed short    vs16;
 typedef volatile signed char     vs8;
 
-typedef enum { FALSE = 0, TRUE  = !FALSE } bool;
+typedef enum { FALSE = 0, TRUE  = !FALSE } boolean;
 typedef enum { RESET = 0, SET   = !RESET } FlagStatus, ITStatus;
 typedef enum { DISABLE = 0, ENABLE  = !DISABLE} FunctionalState;
 typedef enum { ERROR = 0, SUCCESS  = !ERROR} ErrorStatus;
@@ -122,7 +122,7 @@ typedef enum
 {
   FALSE = 0, TRUE  = !FALSE
 }
-bool;
+boolean;
 
 typedef enum { RESET = 0, SET   = !RESET } FlagStatus, ITStatus;
 
