@@ -26,3 +26,5 @@ $Id$
    warning from GCC 4.6.
 
 10. Undefine TRUE and FALSE in 91x_type.h before defining the bool type.
+
+11. Rename bool to boolean to prevent clash with C++ bool.
